Revise text on example HTML page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>jQuery-Countdown Example</h1>
-<p>This page serves as an example of how jquery-countdown may be used.</p>
+<p>This page demonstrates the jquery-countdown plugin.</p>
 <p>The dynamic target datetimes below are generated using the <a href="http://momentjs.com/">moment.js</a> library.</p>
 
 <script type="text/javascript" charset="utf-8">
