--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </script>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
-<script src="js/jquery.countdown.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
 
 <script>
     (function($) {
