--- a/test/project.html
+++ b/test/project.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Project Test Suite</title>
 	<link rel="stylesheet" href="qunit.css" type="text/css" media="screen">
-    <script type="text/javascript" src="qunit.js"></script>
+  <script type="text/javascript" src="qunit.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.countdown.js"></script>
 	<script type="text/javascript" src="project.js"></script>
 </head>
